<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item0"
        android:title="@string/menu_item0"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item
        android:id="@+id/item1"
        android:title="@string/menu_item1"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item2"
        android:title="@string/menu_item2"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item3"
        android:title="@string/menu_item3"
        android:orderInCategory="300"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item4"
        android:title="@string/menu_item4"
        android:orderInCategory="400"
        app:showAsAction="never"/>


</menu>